Fixed Question created overflow and trending quizzes criteria

--- a/client/src/components/StatCard/statcard.module.css
+++ b/client/src/components/StatCard/statcard.module.css
@@ -2,10 +2,10 @@
     height: 150px;
     width: 300px;
     border-radius: 10px;
-    background-color: #FFF;
+    background-color: #fff;
 }
 
-.statContainer{
+.statContainer {
     width: 50%;
     margin: auto;
 }
@@ -14,13 +14,23 @@ p {
     display: inline;
 }
 
-.countStat{
+.countStat {
     font-size: 60px;
     font-weight: 600;
     margin-right: 20px;
 }
 
+.countStatOnQuestions {
+    position: relative;
+    left: -20px;
+}
+
 .countText {
     font-size: 30px;
     font-weight: 600;
+}
+
+.countTextOnQuestions {
+    position: relative;
+    left: -30px;
 }
